# dreamweb

./: .gitignore  README.md  cli_usage_guide.md  docs_site.py  index.html  main.py  pyproject.toml  test.html  test_serialization.py
.github/workflows/: build.yml  pub.yml
docs/: api_reference.md  cli.md  core_concepts.md  deployment.md  getting_started.md  index.md  seo.md  widgets.md
docs/web/: README.md  build.py  build_static_html.py  docs_app.py  docs_app_static.py  dreamweb.js  index.html
docs/web/components/: __init__.py  code_block.py  footer.py  navbar.py
docs/web/pages/: __init__.py  getting_started.py  home.py  widgets.py
docs/widgets/: api.md
dreamweb/: __init__.py  common.py
dreamweb/builder_module/: __init__.py  builder.py
dreamweb/cli/: __init__.py  commands.py
dreamweb/core/: __init__.py  app.py  state.py  widget.py
dreamweb/runtime/: core.js  runtime.js
dreamweb/runtime/widgets/: api.js  router.js  toast.js
dreamweb/server/: __init__.py  dev_server.py
dreamweb/widgets/: __init__.py  advanced.py  api.py  feedback.py  input.py  layout.py  media.py  navigation.py  text.py
examples/: api_demo.html  api_example.py  api_post_example.py  counter_app.py  hello_world.py  todo_app.py
